--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     --fuenteParrafos:'Open Sans', sans-serif;
 
     --primario: #784D3c;
+    --gris: #e1e1e1;
     --blanco: #ffffff;
     --negro: #000000;
 
@@ -28,6 +29,7 @@ body{
 .contenedor{
     max-width: 120rem;
     width: 90%;
+    width: min(90%, 120rem);
     margin: 0 auto;
 }
 
@@ -37,6 +39,7 @@ a{
 
 h1, h2, h3, h4{
     font-family: var(--fuenteHeading);
+    line-height: 1.2;
 }
 
 h1{
@@ -92,6 +95,10 @@ img{
     margin-top: 5rem;
 }
 
+.barra{
+    padding-top: 4rem;
+}
+
 @media  screen and (min-width: 768px){
     .header__texto{
         margin-top: 15rem;
@@ -134,4 +141,89 @@ img{
     text-align: center;
     font-size: 1.8rem;
     color: var(--blanco);
+}
+
+
+@media  screen and (min-width: 768px){
+    .contenedor-principal{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
+}
+
+
+.entrad{
+    border-bottom: 1px solid var(--gris) ;
+    margin-bottom: 2rem;
+}
+
+.entrada:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+
+.boton{
+    display: block;
+    font-family: var(--fuenteHeading);
+    color: var(--blanco);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+
+}
+
+@media  screen and (min-width: 768px){
+    .boton{
+        display: inline-block;
+    }
+    
+}
+
+.boton--primario{
+    background-color: var(--negro)
+    
+}
+
+.boton--secundario{
+    background-color: var(--primario);
+}
+
+.cursos{
+    list-style: none;
+}
+
+.widget-curso{
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+
+/* Esto servira siempre para el ultimo elemento*/
+.widget-curso:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+
+
+.widget-curso__label{
+        font-family: var(--fuenteHeading);
+        font-weight: 700;
+}
+
+.widget-curso__info{
+        font-weight: normal;
+}
+
+.widget-curso__label,
+.widget-curso__info{
+    font-size: 2rem;
+}
+
+.footer{
+    background-color: var(--negro);
+    padding-bottom: 3rem
+    margin-top: ;
 }
