Se mejoró le performance de la imagenes, agregando la etiqueta picture, con las imagenes dentrom, para que todos los navegadores lo soporten

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ img{
 }
 
 
-.entrad{
+.entrada{
     border-bottom: 1px solid var(--gris) ;
     margin-bottom: 2rem;
 }
@@ -173,6 +173,7 @@ img{
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 2rem;
+    border: none;
 
 }
 
@@ -183,6 +184,9 @@ img{
     
 }
 
+.boton:hover{
+    cursor: pointer;
+}
 .boton--primario{
     background-color: var(--negro)
     
@@ -277,4 +281,42 @@ img{
 }
 
 
+.contacto-bg{
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
 
+}
+
+
+/* Estilos para el formulario */
+
+.formulario{
+    background-color: var(--blanco);
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 5rem;
+
+}
+
+.campo{
+    display: flex;
+    margin-bottom: 2rem;
+
+}
+
+.campo__label{
+    flex: 0 0 9rem;
+    text-align: right;
+
+}
+
+.campo__field{
+    flex: 1;
+    border: 1px solid var(--gris);
+}
+
+.campo__field--text{
+    height: 20rem;
+
+}
