--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,14 @@ img{
 
 /* Header */
 
+.webp .header{
+    background-image: url(../img/banner.jpg);
+}
+
+.no-webp .header{
+    background-image: url(../img/banner.jpg);
+}
+
 .header{
     background-image: url(../img/banner.jpg);
     height: 60rem;
